# trax

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  install_dependencies.sh  install_runtime_dependencies.sh  main.cpp  trax.spec
.github/workflows/: create_release.yml
containers/: Containerfile
headers/: MetadataSearcher.hpp  OutputSuppressor.hpp  TagEditor.hpp  menu.hpp  program.hpp  spinner.hpp  tageditor.hpp  utils.hpp  version.hpp  yt-dlp.hpp  yt_dlp.hpp
src/: MetadataSearcher.cpp  TagEditor.cpp  menu.cpp  program.cpp  tag_editor.cpp  tageditor.cpp  utils.cpp  yt-dlp.cpp  yt_dlp.cpp
